# ronin-cnc

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
cmake/: MacOSBundle.cmake
docs/: ARCHITECTURE.md  BUG_TEMPLATE.md  BUILD.md  CHANGELOG.md  HARDWARE_REQUIREMENTS.md  KNOWN_ISSUES.md  PLATFORM-API.md  RELEASE_CHECKLIST.md
gamedata/: AUD.MIX  EXPAND2.MIX  EXPAND3.MIX  MAIN.MIX  REDALERT.MIX  SETUP.MIX  WOLAPI.MIX  aftermath.MIX  barren.mix  campaign.mix  cave.mix  counterstrike.MIX  desert.mix  interior.mix  jungle.mix  raed.mix  raed1.mix  raed2.mix  sc-flamedancers.mix  spawn1.mix  winter.mix
include/: platform.h
include/compat/: compat.h  directx.h  gcl.h  hmi_sos.h  network_wrapper.h  watcom.h  windows.h
include/game/: abstract.h  cell.h  coord.h  display.h  facing.h  gadget.h  game.h  gscreen.h  house.h  map.h  mission.h  object.h  scroll_manager.h  techno.h  viewport.h  weapon.h
include/test/: test_fixtures.h  test_framework.h  test_reporter.h
platform/: Cargo.toml  build.rs  cbindgen.toml
platform/.claude/: ralph-loop.local.md
platform/macos/: Info.plist.in
platform/src/: error.rs  lib.rs
platform/src/app/: lifecycle.rs  mod.rs
platform/src/assets/: mix.rs  mod.rs  palette.rs  pcx.rs  shape.rs  template.rs
platform/src/audio/: adpcm.rs  mod.rs
platform/src/blit/: basic.rs  copy.rs  mod.rs  remap.rs  scale.rs  shadow.rs  simd.rs
platform/src/compression/: lcw.rs  mod.rs
platform/src/config/: mod.rs  paths.rs
platform/src/crypto/: blowfish.rs  mod.rs  rsa.rs
platform/src/ffi/: mod.rs
platform/src/files/: mod.rs  path.rs
platform/src/graphics/: display.rs  mod.rs  palette.rs  surface.rs
platform/src/input/: mod.rs
platform/src/logging/: mod.rs
platform/src/memory/: mod.rs
platform/src/network/: client.rs  host.rs  manager.rs  mod.rs  packet.rs  tests_integration.rs
platform/src/perf/: mod.rs  pool.rs  simd.rs  timing.rs
platform/src/timer/: mod.rs
platform/src/util/: crc.rs  mod.rs  random.rs
project-plan/: 00-OVERVIEW.md  01-BUILD-SYSTEM.md  02-PLATFORM-ABSTRACTION.md  03-GRAPHICS-SYSTEM.md  04-INPUT-SYSTEM.md  05-TIMING-SYSTEM.md  06-MEMORY-MANAGEMENT.md  07-FILE-SYSTEM.md  08-AUDIO-SYSTEM.md  09-ASSEMBLY-REWRITES.md  10-NETWORKING.md  11-CLEANUP-POLISH.md  12-OVERVIEW-PHASE2.md  13-ASSET-SYSTEM.md  14-COMPATIBILITY-LAYER.md  15-GAME-CODE-PORTING.md  16-GRAPHICS-INTEGRATION.md  17-INPUT-INTEGRATION.md  18-AUDIO-INTEGRATION.md  19-TESTING-POLISH.md  20-IMPLEMENTATION-SUMMARY.md  RALPH-STRATEGY.md
ralph-tasks/: AUTHORING-GUIDE.md  README.md
ralph-tasks/01-build-system/: 01a-rust-crate.md  01b-cbindgen.md  01c-cmake-corrosion.md  01d-link-test.md
ralph-tasks/02-platform/: 02a-error-types.md  02b-ffi-exports.md  02c-header-compat.md
ralph-tasks/03-graphics/: 03a-sdl2-window.md  03b-surface-management.md  03c-texture-streaming.md  03d-palette-conversion.md  03e-full-render-pipeline.md
ralph-tasks/04-input/: 04a-input-module-setup.md  04b-keyboard-input.md  04c-mouse-input.md  04d-input-integration.md
ralph-tasks/05-timing/: 05a-basic-timing.md  05b-periodic-timers.md  05c-frame-rate-control.md  05d-timing-integration.md
ralph-tasks/06-memory/: 06a-core-allocation.md  06b-debug-tracking.md  06c-ffi-exports.md  06d-memory-integration.md
ralph-tasks/07-filesystem/: 07a-path-utilities.md  07b-file-operations.md  07c-directory-operations.md  07d-ffi-file-exports.md
ralph-tasks/08-audio/: 08a-audio-device.md  08b-pcm-playback.md  08c-adpcm-decoder.md  08d-audio-integration.md
ralph-tasks/09-assembly/: 09a-basic-buffer.md  09b-buffer-blit.md  09c-palette-remap.md  09d-buffer-scale.md  09e-shadow-draw.md  09f-lcw-compression.md  09g-crc-random.md  09h-asm-integration.md  09i-simd-optimize.md
ralph-tasks/10-networking/: 10a-network-init.md  10b-host-impl.md  10c-client-impl.md  10d-packet-types.md  10e-network-manager.md  10f-compat-headers.md  10g-integration-test.md
ralph-tasks/11-polish/: 11a-config-paths.md  11b-logging.md  11c-display-integration.md  11d-app-lifecycle.md  11e-performance.md  11f-app-bundle.md  11g-universal-binary.md  11h-test-infrastructure.md  11i-documentation.md
ralph-tasks/12-asset-system/: 12a-crc-ffi.md  12b-mix-header.md  12c-mix-lookup.md  12d-mix-manager.md  12e-palette-loading.md  12f-shape-loading.md  12g-template-loading.md  12h-integration-test.md  12i-mix-decryption.md
ralph-tasks/13-compat-layer/: 13a-windows-types.md  13b-watcom-compat.md  13c-directx-stubs.md  13d-audio-stubs.md  13e-master-header.md  13f-implementations.md  13g-cmake-integration.md  13h-original-code-test.md
ralph-tasks/14-game-code-port/: 14a-project-structure.md  14b-coordinate-types.md  14c-gscreen-class.md  14d-map-class.md  14e-cell-class.md  14f-display-class.md  14g-object-class.md  14h-type-classes.md  14i-main-game-loop.md  14j-integration.md  KNOWN_ISSUES.md
ralph-tasks/15-graphics-integration/: 15a-graphics-buffer.md  15b-shape-drawing.md  15c-tile-rendering.md  15d-palette-management.md  15e-mouse-cursor.md  15f-render-pipeline.md  15g-viewport-scrolling.md  15h-integration-testing.md
ralph-tasks/16-input-integration/: 16a-input-foundation.md  (+7 more)
scripts/: build-universal.sh  create-bundle.sh  create_bundle.sh  create_dmg.sh  generate_icons.sh  notarize_bundle.sh  run-tests.sh  sign_bundle.sh
src/: main.cpp  main_game.cpp  test_asm.cpp  test_assets.cpp  test_aud_loader.cpp  test_audio.cpp  test_audio_events.cpp  test_audio_integration.cpp  test_command_system.cpp  test_compat.cpp  test_framework_self_test.cpp  test_game_structure.cpp  test_graphics_buffer.cpp  test_graphics_integration.cpp  test_input_foundation.cpp  test_input_integration.cpp  test_input_mapper.cpp  test_keyboard_handler.cpp  test_mix_decrypt.cpp  test_mouse_cursor.cpp  test_mouse_handler.cpp  test_music_player.cpp  test_original_compile.cpp  test_palette_manager.cpp  test_platform.cpp  test_render_pipeline.cpp  test_scroll_processor.cpp  test_selection.cpp  test_shape_drawing.cpp  test_sound_manager.cpp  test_tile_rendering.cpp  test_viewport.cpp  test_voice_manager.cpp
(+232 files in other folders)
